Fix lane refinements: the reviewer's evidence travels, the author is honest
A still_open ruling's evidence was discarded on carry-forward, so the next
fix task rendered only the original finding description; starved of the
reviewer's sharpest explanation, fix agents re-claimed "already fixed" and
the loop escalated. The carried row now stores the ruling's evidence
(carry_evidence, nullable; each re-carry overwrites with the newest ruling,
the carried_from chain preserving history), the fix task renders it as a
reproduction claim the agent must answer with code or a dispute argument,
and the re-review prompt shows each carried finding with its own prior
scenario. The review prompt asks still_open verdicts for the exact residual
scenario so the evidence actually arrives.

The fix lane also posted as the reviewer: rotateCredential rejoined the run
without touching its identity, so a claude-code fix agent posted as
codex/review-<id>. Rotation now stamps the rejoining invocation's agent and
principal (<agent>/fix-<reviewId> vs <reviewer>/review-<reviewId>) and
journals the revision so the honest attribution replicates to rooms, run
views, and Slack narration.